--- a/css/style2.css
+++ b/css/style2.css
@@ -9,3 +9,17 @@
 .icono {
     width: 80%;
 }
+
+.btn-whatsapp {
+    display: block;
+    width: 70px;
+    height: 70px;
+    color: white;
+    position: fixed;
+    right: 50px;
+    bottom: 110px;
+    border-radius: 50%;
+    line-height: 80px;
+    text-align: center;
+    z-index: 999;
+}
