--- a/css/style2.css
+++ b/css/style2.css
@@ -28,12 +28,10 @@
     }
     
     .button {
-        padding-left: 2%;
-        padding-right: 2%;
         background-color: rgb(4, 155, 29);
         margin-top: 25px;
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        color: white;
+        color: rgb(0, 0, 0);
     }
     
     .button:hover {
