--- a/css/reloj.css
+++ b/css/reloj.css
@@ -20,7 +20,7 @@
      color: #ffffff;
      font-size: 40px;
      font-weight: bold;
-     width: 100px;
+     width: 100%;
      height: 70px;
      margin-bottom: 10px;
      border-radius: 5px;
@@ -31,3 +31,9 @@
      font-weight: bold;
      color: #012c0e;
  }
+ /* @media (max-width: 360px) {
+     .cont-temporizador {
+         width: 100%;
+         border: 1px solid red;
+     }
+ } */
