--- a/css/reloj.css
+++ b/css/reloj.css
@@ -20,8 +20,9 @@
      color: #ffffff;
      font-size: 40px;
      font-weight: bold;
+     padding: 9px;
      width: 100%;
-     height: 70px;
+     height: auto;
      margin-bottom: 10px;
      border-radius: 5px;
  }
